--- a/views/partials/facebookSDK.ejs
+++ b/views/partials/facebookSDK.ejs
@@ -6,6 +6,9 @@
         xfbml            : true,
         version          : 'v11.0'
       });
+      FB.getLoginStatus(function(response) {
+        statusChangeCallback(response);
+      });
     };
   </script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
